@@ -15,6 +15,7 @@ Changes since 1.5.1
 * White/blacklisting of otherwise registered algorithms (SC)
 * Add selected XML Signature 1.1 KeyInfo extensions (SC)
 * Add elliptic curve signatures via ECDSA (SC)
+* Support debugging of Reference/SignedInfo data (SC)
 
 Changes between 1.5 and 1.5.1
 =====================================
